[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/play_button.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/tutorial_button.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/tutorial_button_hover.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/play_button_hover.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/logo-animation.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/background.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 76, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 76, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 76, 0, 76, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 152, 0, 76, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 0, 48, 76, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 76, 48, 76, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 152, 48, 76, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 0, 96, 76, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 76, 96, 76, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 152, 96, 76, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 0, 144, 76, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 76, 144, 76, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 152, 144, 76, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 76, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 76, 192, 76, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 152, 192, 76, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 0, 240, 76, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 76, 240, 76, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 152, 240, 76, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 0, 288, 76, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 76, 288, 76, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 152, 288, 76, 48 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "hover",
"speed": 40.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.85001
margin_bottom = 2.84998
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -303.0
margin_right = 256.0
margin_bottom = 6.10352e-05
custom_constants/separation = 22
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 512.0
margin_bottom = 140.0
rect_min_size = Vector2( 512, 100 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 7 )
expand = true

[node name="TutoButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 512.0
margin_bottom = 262.0
rect_min_size = Vector2( 512, 100 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.03
anchor_right = 0.501
anchor_bottom = 0.03
margin_left = -227.0
margin_right = 228.976
margin_bottom = 319.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Logo" type="AnimatedSprite" parent="VBoxContainer2"]
scale = Vector2( 6, 6 )
frames = SubResource( 23 )
animation = "idle"
playing = true
centered = false
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/TutoButton" to="." method="_on_Tuto_Button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer2" to="." method="_on_VBoxContainer2_mouse_entered"]
[connection signal="animation_finished" from="VBoxContainer2/Logo" to="." method="_on_Logo_animation_finished"]
